# elephantmemory

./: .env.example  .gitignore  README.md  audit.md  docker-compose.yml  modal_app.py  pyproject.toml
elephantmemory/: cli.py  cost.py  judge.py  llm.py  report.py  runner.py  scenarios.py  scoring.py  types.py
elephantmemory/adapters/: __init__.py  base.py  (+6 more)
scenarios/: 02_temporal_supersede_seat.yaml  03_cross_user_isolation.yaml  04_forget_medication.yaml  05_cross_session_reasoning.yaml  07_abstention.yaml  08_concurrency_address.yaml  abstention_anniversary.yaml  abstention_blood_type.yaml  abstention_passport.yaml  abstention_school.yaml  concurrency_calendar.yaml  concurrency_dietary.yaml  concurrency_phone.yaml  concurrency_relationship_status.yaml  cross_session_reasoning_gift.yaml  cross_session_reasoning_meeting_prep.yaml  cross_session_reasoning_pet_boarding.yaml  cross_session_reasoning_travel_planning.yaml  forget_employer.yaml  forget_financial.yaml  forget_partial_health.yaml  forget_relationship.yaml  implicit_update_diet.yaml  implicit_update_quit_caffeine.yaml  implicit_update_relationship.yaml  implicit_update_remote_work.yaml  implicit_update_running.yaml  isolation_address.yaml  isolation_indirect.yaml  isolation_inferred_negative.yaml  isolation_medical.yaml  recall_dog_name.yaml  recall_emergency_contact.yaml  recall_employer.yaml  recall_pet_age.yaml  recall_sister_city.yaml  temporal_supersede_doctor.yaml  temporal_supersede_job_title.yaml  temporal_supersede_phone.yaml  temporal_supersede_recurring_meeting.yaml
scripts/: run_in_e2b.py
